main: Comment Send Up V
AssistantController Comment  Send Complate

--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
@@ -249,6 +249,7 @@
                             <h4 class="user-name dropdown-toggle" data-toggle="dropdown">@user.UserName <i class="fa fa-angle-down"></i></h4>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="/UserAdmin/Messange/List">Message</a>
+                                <a class="dropdown-item" href="/Home/Index/@user.UserName">Show My Profile</a>
                                 <a class="dropdown-item" href="/UserAdmin/Settings/Index">Settings</a>
                                 <a class="dropdown-item" href="/Signin/LogOut" ">Log Out</a>
                             </div>
