main: Create ContactOnline Controller
Create ContactOnlineController Create, Update + Create + Delete  JsonResault Ajax

--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/Index.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/Index.cshtml
@@ -65,7 +65,7 @@
                                 @if (Model.User.About.SkillCodes.Count != 0)
                                 {
                                     <div class="skill-mf">
-                                        <p class="title-s">Code Skill</p>
+                                        <p class="title-s">My Skill @*Degre*@</p>
                                         @foreach (var item in Model.User.About.SkillCodes)
                                         {
                                             <div class="d-flex justify-content-between">
