--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/UserAccount/Account.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/UserAccount/Account.cshtml
@@ -118,8 +118,8 @@
                             <table class="table my-2  table-bordered table-hover progress-table text-center">
                                 <thead class="text-uppercase">
                                     <tr>
-                                        <th scope="col">Code Skils Name</th>
-                                        <th scope="col">Code Skils Percent</th>
+                                        <th scope="col">Skils Name</th>
+                                        <th scope="col">Skils Percent</th>
                                         <th scope="col">%</th>
                                         <th scope="col">Action</th>
                                     </tr>
@@ -209,6 +209,7 @@
                                             <tr>
                                                 <th scope="row">
                                                     Description
+                                                    <input type="hidden" id="ContactId" value="@Model.Contact.Id" />
                                                 </th>
                                                 <td class="lead-add">@Html.Raw(Model.Contact.Description)</td>
                                             </tr>
@@ -231,8 +232,8 @@
                                                     <td><a href="@item.Url" class="btn m-1 contact-onlie btn-outline-info">@Html.Raw(item.Icon) @item.Name</a></td>
                                                     <td>
                                                         <ul class="d-flex justify-content-center">
-                                                            <li class="mr-3"><button class="bg-transparent contact-onlie-edit-button border-0 text-secondary" data-id="@item.Id" data-toggle="modal" data-target="#contactUpdateModalCenter" data-icon="@item.Icon" data-name="@item.Name" data-link="@item.Url"><i class="fa fa-edit"></i></button></li>
-                                                            <li><a onclick="return confirm('Are You Sure Delete ?')" href="/UserAdmin/UserAccount/ContactDelete/@item.Id" class="text-danger"><i class="ti-trash"></i></a></li>
+                                                            <li class="mr-3"><button class="bg-transparent contact-onlie-edit-button border-0 text-secondary" data-id="@item.Id" data-toggle="modal" data-target="#contactUpdateModalCenter"><i class="fa fa-edit"></i></button></li>
+                                                            <li><a href="/UserAdmin/ConactOnline/Delete/@item.Id" class="text-danger delete-btn"><i class="ti-trash"></i></a></li>
                                                         </ul>
                                                     </td>
                                                 </tr>
@@ -355,40 +356,101 @@
 
     <script>
         $(document).ready(function () {
+            DataCome();
+        })
+
+        function DataCome() {
             $(".form-gp input").each(function (x) {
                 if ($(this).val() != "") {
                     $(this).focus()
                 }
+            })
+        }
+
+    </script>
+
+    <script>
+        $(document).ready(() => {
+
+            $(".contact-onlie-edit-button").each(function () {
+                $(this).click(function (e) {
+
+                    const id = $(e.currentTarget).data('id');
+                    $.ajax({
+                        url: `/UserAdmin/ConactOnline/Update/${id}`,
+                        type: 'GET',
+                        success: (response) => {
+                            if (response.hasOwnProperty('status') && response.status === 404) {
+                                Swal.fire(
+                                    'Not Find Concat Onlie Link',
+                                    '',
+                                    'error'
+                                )
+                            } else {
+                                $("#connectonlieId").val(response.id)
+                                $("#iconedit").val(response.name)
+                                $("#urledit").val(response.url)
+                                $("#nameedit").val(response.icon)
+                                DataCome();
+                            }
+                            DataCome()
+                        }
+                    });
+                    DataCome();
+                })
             })
         })
     </script>
 
     <script>
         $(document).on("submit", "#formedit", (e) => {
+            e.preventDefault();
+            let ContactId = $("#ContactId").val()
+            console.log(ContactId)
             $.ajax({
-                url: "/UserAdmin/UserAccount/ContactOnlineUpdate",
-                type: "POST",
-                data: { id: $("#connectonlieId").val(), icon: $("#iconedit").val(), url: $("#urledit").val(), name: $("#nameedit").val() },
-                success: (resp) => {
-                    location.href = "/UserAdmin"
+                url: '/UserAdmin/ConactOnline/Update',
+                headers: {
+                    "RequestVerificationToken": $('input[name="__RequestVerificationToken"]').val()
+                },
+                type: 'POST',
+                data: { Id: $("#connectonlieId").val(), Icon: $("#iconedit").val(), Url: $("#urledit").val(), Name: $("#nameedit").val(), ContactId: ContactId },
+                success: (response) => {
+                    if (response.hasOwnProperty('status') && response.status === 201) {
+                        Swal.fire(
+                            'New Contact Link Added',
+                            '',
+                            'success'
+                        )
+                        setTimeout(() => {
+                            location.href = '/UserAdmin/UserAccount/Account';
+                        }, 2000)
+                    } else {
+                        Swal.fire(
+                            'Not Added',
+                            '',
+                            'error'
+                        )
+                    }
                 }
             })
         });
+
     </script>
 
     <script>
         $(document).ready(() => {
             $(document).on('submit', '#form', (e) => {
                 e.preventDefault();
+                let ContactId = $("#ContactId").val()
                 $.ajax({
-                    url: '/UserAdmin/UserAccount/ContactOnlineCreate',
+                    url: '/UserAdmin/ConactOnline/Create',
                     headers: {
                         "RequestVerificationToken": $('input[name="__RequestVerificationToken"]').val()
                     },
                     type: 'POST',
-                    data: { icon: $("#icon").val(), url: $("#url").val(), name: $("#name").val() },
+                    data: { Icon: $("#icon").val(), Url: $("#url").val(), Name: $("#name").val(), ContactId: ContactId },
                     success: (response) => {
-                        if (response.hasOwnProperty('status') && response.status === 200) {
+                        if (response.hasOwnProperty('status') && response.status === 201) {
                             Swal.fire(
                                 'New Contact Link Added',
                                 '',
@@ -410,6 +472,54 @@
         })
     </script>
 
+    <script>
+        $(document).on('click', '.delete-btn', function (e) {
+            e.preventDefault();
+            let url = $(this).attr("href");
+            let element = this.parentElement.parentElement;
+            var __RequestVerificationToken = $("input[name='__RequestVerificationToken']").val();
+            Swal.fire({
+                title: 'Are You Sure Delete?',
+                text: "Unable to return after deletion!",
+                type: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Delete',
+                cancelButtonText: 'Cancel'
+            }).then((result) => {
+                if (result.value) {
+                    $.ajax({
+                        url: url,
+                        type: "get",
+                        beforeSend: function (request) {
+                            request.setRequestHeader('RequestVerificationToken', $("input[name='__RequestVerificationToken']").val());
+                        },
+                        dataType: "json",
+                        success: function (response) {
+                            if (response.status == 201) {
+                                Swal.fire(
+                                    'Deleted!',
+                                    '',
+                                    'success'
+                                )
+
+                                element.outerHTML = '';
+                            }
+                            else if (response.status == 400) {
+                                Swal.fire(
+                                    'Don"t Deleted',
+                                    '',
+                                    'error'
+                                )
+                            }
+                        }
+                    });
+                }
+            })
+        });
+
+    </script>
 
     <script>
         $(document).ready(function () {
@@ -418,23 +528,6 @@
             })
         })
     </script>
-
-    <script>
-        //console.log( $("contact-onlie").children("a"))
-
-        $(".contact-onlie-edit-button").each(function () {
-
-            $(this).click(function () {
-                $("#connectonlieId").attr("value", $(this).attr("data-id"))
-                $("#iconedit").attr("value", $(this).attr("data-icon"))
-                $("#urledit").attr("value", $(this).attr("data-link"))
-                $("#nameedit").attr("value", $(this).attr("data-name"))
-
-            })
-        })
-
-    </script>
-
     <!-- others plugins -->
     <script src="~/Admin/assets/js/plugins.js"></script>
     <script src="~/Admin/assets/js/scripts.js"></script>
