--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/PortfolioSinglePage.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/PortfolioSinglePage.cshtml
@@ -51,7 +51,7 @@
                             <li><strong>Category</strong>: @Model.PortfolioCategory.Name </li>
                             <li><strong>Client</strong>: @Model.PortfolioDetail.Client</li>
                             <li><strong>Project date</strong>: @Model.Date.Day @Model.Date.ToString("Y")</li>
-                            <li><strong>Project URL</strong>: <a href="@Model.PortfolioDetail.LocatoionURL">@Model.PortfolioDetail.LocatoionURL</a></li>
+                            <li><strong>Project URL</strong>: <a href="@Model.PortfolioDetail.LocatoionURL">Project Location</a></li>
                         </ul>
                     </div>
                     <div class="portfolio-description">
