--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Shared/_Layout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Shared/_Layout.cshtml
@@ -20,8 +20,6 @@
 
     <!-- Favicons -->
     <link href="~/img/uversalfilo.png" rel="icon">
-    <link href="~/img/apple-touch-icon.png" rel="apple-touch-icon">
-
 
 
     <!-- Vendor CSS Files -->
@@ -42,6 +40,7 @@
     * Author: BootstrapMade.com
     * License: https://bootstrapmade.com/license/
     ======================================================== -->
+    <link href="~/img/uversalfilo.png" rel="apple-touch-icon">
 </head>
 
 <body>
