--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Signin/ResetPassword.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Signin/ResetPassword.cshtml
@@ -25,9 +25,13 @@
     <link rel="stylesheet" href="~/Admin/assets/css/default-css.css">
     <link rel="stylesheet" href="~/Admin/assets/css/styles.css">
     <link rel="stylesheet" href="~/Admin/assets/css/responsive.css">
-    <link href="~/img/uversalfilo.png" rel="icon">
     <!-- modernizr css -->
     <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
+    <link href="~/img/uversalfilo.png" rel="apple-touch-icon">
+    <link href="~/img/uversalfilo.png" rel="icon">
+
+
+
 </head>
 
 <body>
