--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Blog/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Blog/Create.cshtml
@@ -98,7 +98,7 @@
                             <span class="input-group-text">Upload Image</span>
                         </div>
                         <div class="custom-file">
-                            <input type="file" class="custom-file-input" asp-for="Photo" accept="image/jpeg,image/jpg,image/png,image/gif,image/jfif" required onchange="showPreview(event);">
+                            <input type="file" class="custom-file-input" asp-for="Photo" accept="image/jpeg,image/jpg,image/png,image/gif,image/jfif" onchange="showPreview(event);">
                             <label class="custom-file-label" asp-for="Photo">Choose Image</label>
                         </div>
                         <div class="w-100 d-flex mt-3 justify-content-center">
