--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Home/Update.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Home/Update.cshtml
@@ -50,7 +50,7 @@
                             <span class="input-group-text">Upload Image</span>
                         </div>
                         <div class="custom-file">
-                            <input type="file" class="custom-file-input" asp-for="Potho" required onchange="showPreview(event);">
+                            <input type="file" class="custom-file-input" asp-for="Potho"  onchange="showPreview(event);">
                             <label class="custom-file-label" asp-for="Potho">Choose Image</label>
                         </div>
                         <div class="w-100 d-flex mt-3 justify-content-center">
