--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Signin/Register.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Signin/Register.cshtml
@@ -31,6 +31,8 @@
     <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
 
     <link href="~/img/uversalfilo.png" rel="icon">
+    <link href="~/img/uversalfilo.png" rel="apple-touch-icon">
+
 </head>
 
 <body>
