main: Protfolio Show Loading Messange add
PortfolioController Show View Image adding time Loading Messange add + Category and Tag add time loading messange add

--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Blog/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Blog/Create.cshtml
@@ -212,6 +212,14 @@
             $(document).on('submit', '#form', (e) => {
                 e.preventDefault();
                 const id = $("#name").val()
+                Swal.fire({
+                    title: 'Give me a second.',
+                    text: '"',
+                    imageUrl: 'https://media.giphy.com/media/xTkcEQACH24SMPxIQg/giphy.gif',
+                    imageWidth: 400,
+                    imageHeight: 350,
+                    imageAlt: 'Loading',
+                });
                 $.ajax({
                     url: '/UserAdmin/BlogCategory/Create',
                     headers: {
