--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Signin/ForgetPassword.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Signin/ForgetPassword.cshtml
@@ -12,7 +12,6 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Forget Password</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="~/img/uversalfilo.png" rel="icon">
     <link rel="stylesheet" href="~/Admin/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/Admin/assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/Admin/assets/css/themify-icons.css">
@@ -29,7 +28,8 @@
     <!-- modernizr css -->
     <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
 
-
+    <link href="~/img/uversalfilo.png" rel="icon">
+    <link href="~/img/uversalfilo.png" rel="apple-touch-icon">
 </head>
 
 <body>
