--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/System/Error404.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/System/Error404.cshtml
@@ -11,7 +11,6 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Error 404</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="assets/images/icon/favicon.ico">
     <link rel="stylesheet" href="~/Admin/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/Admin/assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/Admin/assets/css/themify-icons.css">
@@ -27,7 +26,8 @@
     <link rel="stylesheet" href="~/Admin/assets/css/responsive.css">
     <!-- modernizr css -->
     <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
-
+    <link href="~/img/uversalfilo.png" rel="icon">
+    <link href="~/img/uversalfilo.png" rel="apple-touch-icon">
 
 </head>
 
