--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Shared/Error.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Shared/Error.cshtml
@@ -3,23 +3,69 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
+@{
+    Layout = null;
 }
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+
+<!doctype html>
+<html class="no-js" lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Error</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="assets/images/icon/favicon.ico">
+    <link rel="stylesheet" href="~/Admin/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/themify-icons.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/metisMenu.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/slicknav.min.css">
+    <!-- amchart css -->
+    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
+    <!-- others css -->
+    <link rel="stylesheet" href="~/Admin/assets/css/typography.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/default-css.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/styles.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/responsive.css">
+    <!-- modernizr css -->
+    <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
+
+
+</head>
+
+<body>
+    <div id="preloader">
+        <div class="loader"></div>
+    </div>
+    <!-- preloader area end -->
+    <!-- error area start -->
+    <div class="error-area ptb--100 text-center">
+        <div class="container">
+            <div class="error-content">
+                <h2>Error </h2>
+                <p>Opps . We have some error. Plase Contact me and raport this error</p>
+                <a href="/">Back to Main Page</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- jquery latest version -->
+    <script src="~/Admin/assets/js/vendor/jquery-2.2.4.min.js"></script>
+    <!-- bootstrap 4 js -->
+    <script src="~/Admin/assets/js/popper.min.js"></script>
+    <script src="~/Admin/assets/js/bootstrap.min.js"></script>
+    <script src="~/Admin/assets/js/owl.carousel.min.js"></script>
+    <script src="~/Admin/assets/js/metisMenu.min.js"></script>
+    <script src="~/Admin/assets/js/jquery.slimscroll.min.js"></script>
+    <script src="~/Admin/assets/js/jquery.slicknav.min.js"></script>
+
+    <!-- others plugins -->
+    <script src="~/Admin/assets/js/plugins.js"></script>
+    <script src="~/Admin/assets/js/scripts.js"></script>
+
+</body>
+
+</html>
